--- a/northKansasCityPublicSchools/css/customMap.css
+++ b/northKansasCityPublicSchools/css/customMap.css
@@ -21,7 +21,7 @@ html, body {
 #searchMenu {
 	position: absolute;
 	width: 600px;
-	height: 100px;
+	height: 120px;
 	background: rgba(0,0,0,0.65);
 	left: 0;
 	right: 0;
@@ -46,6 +46,17 @@ html, body {
 	margin-left: 10%;
 	margin-right: 10%;
 	margin-top: 55px;
+	border-radius: 4px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+}
+
+#searchMenu #customInput {
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 10px;
 	border-radius: 4px;
 	padding-top: 5px;
 	padding-bottom: 5px;
