--- a/northKansasCityPublicSchools/css/customMap.css
+++ b/northKansasCityPublicSchools/css/customMap.css
@@ -21,7 +21,7 @@ html, body {
 #searchMenu {
 	position: absolute;
 	width: 600px;
-	height: 120px;
+	height: 140px;
 	background: rgba(0,0,0,0.65);
 	left: 0;
 	right: 0;
@@ -40,6 +40,15 @@ html, body {
 	margin: auto;
 }
 
+#searchMenu #buttonBox2 {
+	position: absolute;
+	top: 100px;
+	width: 50%;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
 
 #searchMenu #formOne {
 	width: 80%;
@@ -50,17 +59,21 @@ html, body {
 	padding-top: 5px;
 	padding-bottom: 5px;
 	padding-left: 5px;
+	visibility: visible;
 }
 
 #searchMenu #customInput {
+	position: absolute;
+	top: 55px;
 	width: 80%;
 	margin-left: 10%;
 	margin-right: 10%;
-	margin-top: 55px;
+	margin-top: 0px;
 	border-radius: 4px;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	padding-left: 5px;
+	visibility: hidden;
 }
 
 #searchMenu #questionOne {
